# connectedvcs-tools

./: .dockerignore  .gitignore  Dockerfile  asn1c_script.sh  build.sh  script.sh  validate_coverage.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.sonarqube/: sonar-scanner.properties
docs/: Azure_Maps_API_Key_Guidance.md  Docker_Instructions.md  Esri_API_Key_Guidance.md  Local_Instructions.md  Release_notes.md  S3_Bucket_Configuration.md
fedgov-cv-ISDcreator-webapp/: README.md  pom.xml
fedgov-cv-ISDcreator-webapp/src/main/webapp/: index.html
fedgov-cv-ISDcreator-webapp/src/main/webapp/css/: mapping.css  verticalscroll.css
fedgov-cv-ISDcreator-webapp/src/main/webapp/js/: api.js  approachRow.html  config.js  depositor-latest.js  depositor.js  features.js  files.js  interactions.js  latlon-vincenty.js  main.js  map-event.js  map.js  (+7 more)
fedgov-cv-TIMcreator-webapp/: pom.xml
fedgov-cv-TIMcreator-webapp/src/main/webapp/: index.html
fedgov-cv-asn1decoder/: pom.xml
fedgov-cv-asn1decoder/src/main/resources/: log4j2.xml
fedgov-cv-lib-asn1c/: CMakeLists.txt  build_jni.sh  pom.xml
fedgov-cv-lib-asn1c/src/main/java/: decoder_wrapper.c  gov_usdot_cv_asn1decoder_Decoder.h  gov_usdot_cv_asn1decoder_TIMDecoder.h  gov_usdot_cv_rgaencoder_Encoder.h  gov_usdot_cv_timencoder_Encoder.h  rga_wrapper.c  tim_decoder_wrapper.c  tim_wrapper.c  wrapper.c
fedgov-cv-lib-asn1c/src/main/java/gov/usdot/cv/libasn1decoder/: DecodedResult.java
fedgov-cv-map-georeferencing/: .dockerignore  .gitignore  Dockerfile  README.md  pom.xml
fedgov-cv-map-georeferencing/scripts/: georeference.py  test-georeference-request.sh
fedgov-cv-map-georeferencing/src/main/resources/: application.yaml  log4j2.xml
fedgov-cv-map-georeferencing/ui_test/: app.js  georef.tif  index.html  style.css
fedgov-cv-map-services-proxy/: pom.xml
fedgov-cv-map-services-proxy/src/main/resources/: application.properties
fedgov-cv-mapencoder/: pom.xml
fedgov-cv-message-builder/: pom.xml
fedgov-cv-message-builder/src/test/resources/: sample_tim.json  sample_tim_lane.json  sample_tim_large_1.json  sample_tim_large_2.json  sample_tim_poly.json  sample_tim_tight.json  sample_tim_withroadfriction.json  sample_timplusframe.json  samplemap11.json  samplemap12.json  samplerga10.json  samplerga11.json  samplerga12.json  samplerga13.json  samplerga14.json  samplerga15.json  samplerga16.json  samplerga17.json  samplerga18.json  samplerga3.json  samplerga4.json  samplerga5.json  samplerga6.json  samplerga7.json  samplerga8.json  samplerga9.json  tim_Circle.json  tim_Circle2.json  tim_road_roughness.json  tim_road_roughness_asphalt.json  tim_road_roughness_dry.json  tim_road_roughness_grass.json  tim_road_roughness_gravel.json
fedgov-cv-message-validator-webapp/: pom.xml
fedgov-cv-message-validator-webapp/src/main/resources/: log4j2.xml
fedgov-cv-message-validator-webapp/src/main/webapp/: index.html
fedgov-cv-parent/: pom.xml
fedgov-cv-rgaencoder/: pom.xml
fedgov-cv-timencoder/: pom.xml
fedgov-cv-timencoder/src/main/resources/: log4j2.xml
root/: index.html
(+218 files in other folders)
